# to-do-app

./: README.md  pyproject.toml
templates/: base.html
to_do/: admin.py  models.py  urls.py  views.py
to_do/migrations/: 0001_initial.py
to_do/templates/to_do/: index.html  task_confirm_delete.html  task_form.html  todo_list.html  todolist_form.html
todoapp/todoapp/: settings.py
todoapp/todoproject/: settings.py  wsgi.py
todoproject/: settings.py  urls.py
